# discord_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  Procfile  README.md  cookies.txt  marmoBot.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup_env.sh
discord_bot/: Procfile  db.sqlite3  manage.py  marmoBot.py  settings.py
discord_bot/discord_bot/: asgi.py  db.sqlite3  settings.py  urls.py  views.py  wsgi.py
discord_bot/discord_bot/settings/: base.py  dev.py  production.py
discord_bot/halloween_bot/: apps.py  halloween_cog.py  halloween_commands.py
discord_bot/music_bot/: admin.py  apps.py  dto.py  models.py  music_cog.py  music_commands.py  music_reference.py  music_service.py  urls.py  views.py  youtube_extractor.py
discord_bot/music_bot/migrations/: 0001_initial.py  0002_alter_songlog_duration.py  0003_alter_songlog_thumbnail.py
discord_bot/static/css/: styles.css
discord_bot/static/js/: sidebar.js
discord_bot/templates/: base.html
discord_bot/templates/music_bot/: disconnect.html  join.html  move.html  music_commands_help.html  now_playing.html  pause.html  play.html  play_next.html  queue.html  resume.html  shuffle.html  skip.html
halloween/: halloween_cog.py  halloween_commands.py
music/: music_cog.py  music_commands.py  music_reference.py
talk/: talk.py
