[tool.poetry]
name = "discord-music-bot"
version = "0.1.0"
description = "A private discord bot for my servers. It's main function is to play youtube music."
authors = ["Blightning97 <jasonzatre@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosignal = "==1.3.1"
bs4 = "==0.0.1"
discord = "2.2.2"
Django = "==4.1"
numpy = "==1.23.1"
psycopg2-binary = "==2.9.3"
schedule = "==1.1.0"
gunicorn = "==20.1.0"
whitenoise = "==6.2.0"
google-api-python-client = "==2.55.0"
pillow = "==9.2.0"
validators = "==0.20.0"
datetime = "==4.5"
django = "==4.1"
pynacl = "==1.5.0"
yt-dlp = "==2023.7.6"
ffmpeg-python = "==0.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
