[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosignal==1.3.1",
    "bs4==0.0.1",
    "discord==2.2.2",
    "Django==4.1",
    "numpy>1.23.1",
    "psycopg2-binary==2.9.11",
    "schedule==1.1.0",
    "gunicorn==20.1.0",
    "whitenoise==6.2.0",
    "pillow==12.1.1",
    "google-api-python-client==2.55.0",
    "validators==0.20.0",
    "datetime==4.5",
    "django==4.1",
    "pynacl==1.5.0",
    "yt-dlp==2026.2.4",
    "ffmpeg-python==0.2.0",
    "pillow>=12.1.1",
    "environs>=14.5.0",
]
