[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosignal==1.3.1",
    "bs4==0.0.1",
    "discord==2.2.2",
    "django>=4.2,<5",
    "numpy>1.23.1",
    "schedule==1.1.0",
    "gunicorn==20.1.0",
    "whitenoise==6.2.0",
    "google-api-python-client==2.55.0",
    "validators==0.20.0",
    "pynacl==1.5.0",
    "yt-dlp==2026.2.4",
    "ffmpeg-python==0.2.0",
    "pillow>=12.1.1",
    "environs>=14.5.0",
    "psycopg[binary]>=3.3.3",
    "pytz>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
]

[project.scripts]
pre-commit = "pre_commit.main:main"
